# qlik-sense

./: LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
qlik_sense/: __init__.py  api.py  client.py  models.py  services.py  session.py  unit_of_work.py
qlik_sense/abstract_repositories/: __init__.py  app.py
qlik_sense/clients/: __init__.py  base.py  ntlm_client.py  ssl_client.py
qlik_sense/domain/: models.py
qlik_sense/models/: app.py  base.py  custom_property.py  stream.py  tag.py  user.py
qlik_sense/orm/: __init__.py  app.py  controller.py  session.py
qlik_sense/repositories/: __init__.py  app_qlik_sense.py
qlik_sense/service_layer/: services.py  unit_of_work.py
qlik_sense/services/: __init__.py  app.py  base.py  stream.py  user.py  util.py
tests/: auth.py  conftest.py  fakes.py  test_advanced.py  test_app.py
tests/test_e2e/: auth.py  config.py  test_app.py  test_clients.py  test_stream.py  test_user.py
