[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "qlik_sense"
author = "Mike Alfare"
author-email = "alfare@gmail.com"
home-page = "https://github.com/mikealfare/qlik_sense"

requires = [
    "requests",
    "requests_ntlm",
    "urllib3"
]
requires-python = ">=3.7,<4"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7"
]

keywords = "QlikSense Qlik Sense"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov"
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme"
]