[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "qlik_sense"
author = "Mike Alfare"
author-email = "alfare@gmail.com"
home-page = "https://github.com/fivestack/qlik_sense"

requires = [
    "requests >=2.22.0,<3.0",
    "requests_ntlm >=1.1.0,<2.0",
    "requests_negotiate_sspi >=0.5.2,<0.6",
    "urllib3 >=1.25.6,<2.0",
    "uuid >=1.30,<2.0",
    "marshmallow >=3.2.1,<4.0"
]
requires-python = ">=3.7,<4"
description-file = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7"
]

keywords = "QlikSense Qlik Sense"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov"
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme"
]